# hallpass

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: ci.yml
deploy/: Caddyfile
docs/: ARCHITECTURE.md  CATALOG.md  DEPLOY.md  IDEAS.md  PLATFORM.md  agent-identity-and-organization.md  multi-user-is-the-hard-part.md
evals/: __init__.py  benchmark.py  tool_search_benchmark.py
examples/: direct_messages.py  minimal.py  orchestrator.py  quickstart.py  reference_agent.py  spawn_agents.py  spawned_agent.py
scripts/: gen_catalog.py
src/hallpass/: __init__.py  a2a.py  agents.py  approvals.py  audit.py  catalog.py  cli.py  connectors.py  consent.py  control.py  core.py  dashboard.py  delegation.py  diagnostics.py  dm.py  flex.py  gating.py  guard.py  http_server.py  humangate.py  idempotency.py  identity.py  mcp_adapter.py  minter.py  oauth.py  orchestrator.py  postgres_backends.py  ratelimit.py  redis_backends.py  rest.py  revocation.py  roles.py  runner.py  sanitize.py  search.py  seats.py  server.py  taskqueue.py  toolkit.py  vault.py
tests/: conftest.py  test_a2a.py  test_a2a_store.py  test_agent_lifecycle.py  test_agents.py  test_annotations.py  test_approvals.py  test_audit.py  test_auto_refresh.py  test_availability.py  test_channel_policy_store.py  test_circuit_breaker.py  test_cli.py  test_consent.py  test_consent_ledger.py  test_control.py  test_control_http.py  test_delegation.py  test_diagnostics.py  test_dm.py  test_end_to_end.py  test_flex.py  test_form_encoded.py  test_gating_failure_modes.py  test_graceful_shutdown.py  test_graphql.py  test_guard.py  test_harness_registry.py  test_http_server.py  test_humangate.py  test_idempotency.py  test_identity_failure_modes.py  test_jwks.py  test_mcp_adapter.py  test_minter.py  test_multi_credential.py  test_oauth.py  test_orchestrator.py  test_pending_store.py  test_performance.py  (+28 more)
