[project]
name = "hallpass"
version = "1.11.0"
description = "Auth-native substrate for multi-agent organizations: per-agent identity, scope-as-capability, coordination gated by one core."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jacob Malm" }]
keywords = [
    "mcp",
    "oauth",
    "multi-user",
    "authorization",
    "agents",
    "multi-agent",
    "orchestration",
    "agent-identity",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "pyjwt[crypto]>=2.8",
    "cryptography>=3.4",
]

[project.optional-dependencies]
mcp = ["mcp>=1.9"]
http = ["httpx>=0.27"]
connectors = ["httpx>=0.27"]

[project.urls]
Repository = "https://github.com/Jacobobber/hallpass"

[project.scripts]
hallpass = "hallpass.cli:main"

[dependency-groups]
dev = ["pytest>=8", "mcp>=1.9", "httpx>=0.27", "hypothesis>=6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hallpass"]

[tool.pytest.ini_options]
testpaths = ["tests"]
